tests/snapshots/tbir__bus_arbiter_emitted_cpp.snap
---
source: tests/tbir.rs
expression: "emit_fixture_cpp(\"bus_arbiter_test.harc\")"
---
// Auto-generated by harc — do not edit.
// Codegen: tbir (TB-IR loop-switch backend).
// HARC test: BusArbiterTest

#ifdef __clang__
#pragma clang optimize off
#endif

#include "VBusArbiter.h"
#include "verilated.h"
#if VM_COVERAGE
#include "verilated_cov.h"
#endif
#if defined(HARC_TRACE_VCD)
#include "verilated_vcd_c.h"
#define HARC_TRACE_ENABLED 1
using HarcTraceC = VerilatedVcdC;
#elif defined(HARC_TRACE_FST)
#include "verilated_fst_c.h"
#define HARC_TRACE_ENABLED 1
using HarcTraceC = VerilatedFstC;
#else
#define HARC_TRACE_ENABLED 0
#endif
#include <cstdio>
#include <cstdint>
#include <cstdlib>
#include <cstdarg>
#include <cstring>
#include <string>
#include <array>
#include <vector>
#include <deque>
#include <functional>
#include <thread>
#include <atomic>
#include "harc_thread_rt.h"
#include "harc_random_rt.h"
#include "harc_queue_rt.h"
#include "harc_trace_rt.h"
#include "harc_log_rt.h"

template<typename DUT>
static void _harc_eval_negedge(DUT* dut) {
    if constexpr (requires { dut->clk; }) { dut->clk = 0; }
    dut->eval();
}
template<typename DUT>
static void _harc_eval_posedge(DUT* dut) {
    if constexpr (requires { dut->clk; }) { dut->clk = 1; }
    dut->eval();
}

static harc_rt::random::HarcRng harc_rng;
static inline uint64_t harc_rng_next() {
    return harc_rng.next();
}

struct ArbCov {
    struct {
        uint64_t r0 = 0;
        uint64_t r1 = 0;
        uint64_t r2 = 0;
        uint64_t r3 = 0;
    } cp_grant;
    struct {
        uint64_t granted = 0;
        uint64_t no_request = 0;
    } cp_valid;
    uint64_t _auto_cross_cp_grant__cp_valid[4][2] = {};

    void report() const {
        uint64_t _total = 6; uint64_t _hit = 0;
        if (cp_grant.r0 > 0) _hit++;
        if (cp_grant.r1 > 0) _hit++;
        if (cp_grant.r2 > 0) _hit++;
        if (cp_grant.r3 > 0) _hit++;
        if (cp_valid.granted > 0) _hit++;
        if (cp_valid.no_request > 0) _hit++;
        harc_rt::log::harc_print_covergroup_summary("ArbCov", _hit, _total);
        harc_rt::log::harc_print_covergroup_bin("cp_grant", "r0", cp_grant.r0);
        harc_rt::log::harc_print_covergroup_bin("cp_grant", "r1", cp_grant.r1);
        harc_rt::log::harc_print_covergroup_bin("cp_grant", "r2", cp_grant.r2);
        harc_rt::log::harc_print_covergroup_bin("cp_grant", "r3", cp_grant.r3);
        harc_rt::log::harc_print_covergroup_bin("cp_valid", "granted", cp_valid.granted);
        harc_rt::log::harc_print_covergroup_bin("cp_valid", "no_request", cp_valid.no_request);
        {
            uint64_t _cross_hit = 0;
            uint64_t _cross_missing = 0;
            for (size_t _i = 0; _i < 4; ++_i) for (size_t _j = 0; _j < 2; ++_j) if (_auto_cross_cp_grant__cp_valid[_i][_j] > 0) _cross_hit++;
            harc_rt::log::harc_print_covergroup_cross_summary("ArbCov", "auto_cross", "cp_grant x cp_valid", _cross_hit, 8);
            if (_auto_cross_cp_grant__cp_valid[0][0] == 0) { if (_cross_missing < 16) harc_rt::log::harc_print_covergroup_missing_bin("cp_grant.r0 x cp_valid.granted"); _cross_missing++; }
            if (_auto_cross_cp_grant__cp_valid[0][1] == 0) { if (_cross_missing < 16) harc_rt::log::harc_print_covergroup_missing_bin("cp_grant.r0 x cp_valid.no_request"); _cross_missing++; }
            if (_auto_cross_cp_grant__cp_valid[1][0] == 0) { if (_cross_missing < 16) harc_rt::log::harc_print_covergroup_missing_bin("cp_grant.r1 x cp_valid.granted"); _cross_missing++; }
            if (_auto_cross_cp_grant__cp_valid[1][1] == 0) { if (_cross_missing < 16) harc_rt::log::harc_print_covergroup_missing_bin("cp_grant.r1 x cp_valid.no_request"); _cross_missing++; }
            if (_auto_cross_cp_grant__cp_valid[2][0] == 0) { if (_cross_missing < 16) harc_rt::log::harc_print_covergroup_missing_bin("cp_grant.r2 x cp_valid.granted"); _cross_missing++; }
            if (_auto_cross_cp_grant__cp_valid[2][1] == 0) { if (_cross_missing < 16) harc_rt::log::harc_print_covergroup_missing_bin("cp_grant.r2 x cp_valid.no_request"); _cross_missing++; }
            if (_auto_cross_cp_grant__cp_valid[3][0] == 0) { if (_cross_missing < 16) harc_rt::log::harc_print_covergroup_missing_bin("cp_grant.r3 x cp_valid.granted"); _cross_missing++; }
            if (_auto_cross_cp_grant__cp_valid[3][1] == 0) { if (_cross_missing < 16) harc_rt::log::harc_print_covergroup_missing_bin("cp_grant.r3 x cp_valid.no_request"); _cross_missing++; }
            harc_rt::log::harc_print_covergroup_more_missing(_cross_missing, 16, "auto-cross");
        }
    }
};

struct BusArbiterTb {
    VBusArbiter* dut = nullptr;
    ArbCov cov;
    uint64_t _last_in_cycle = 0;
    uint64_t _last_out_cycle = 0;
};

struct HarcTestContext {
    VBusArbiter* dut = nullptr;
#if HARC_TRACE_ENABLED
    HarcTraceC* tfp = nullptr;
    std::string _wave_path;
#endif
    uint64_t _trace_time = 0;
    int errors = 0;
    bool _fatal = false;
    int cycle_count = 0;
    harc_rt::trace::HarcTraceWriter trace;
    harc_rt::log::HarcLogContext log_ctx;
    std::vector<std::function<void()>> _checkers;
    std::vector<std::function<void()>> _post_eval_services;
    std::vector<std::function<void()>> _auto_cov_reports;
};

int run_BusArbiterTest(int argc, char** argv) {
    Verilated::commandArgs(argc, argv);
    HarcTestContext ctx;
    ctx.dut = new VBusArbiter;
    auto*& dut = ctx.dut;
#if HARC_TRACE_ENABLED
    auto*& tfp = ctx.tfp;
    auto& _wave_path = ctx._wave_path;
#endif
    auto& _trace_time = ctx._trace_time;
    auto& errors = ctx.errors;
    auto& _fatal = ctx._fatal;
    auto& cycle_count = ctx.cycle_count;
    auto& trace = ctx.trace;
    auto& log_ctx = ctx.log_ctx;
    auto& _checkers = ctx._checkers;
    auto& _post_eval_services = ctx._post_eval_services;
    auto& _auto_cov_reports = ctx._auto_cov_reports;
#if HARC_TRACE_ENABLED
    Verilated::traceEverOn(true);
    tfp = new HarcTraceC;
    _wave_path = harc_rt::log::harc_open_wave_trace(dut, tfp, harc_rt::log::harc_wave_default_name());
#endif

    harc_rng.seed_from_env();
    harc_rt::trace::harc_start_trace(trace, harc_rng.state, "BusArbiter", "BusArbiterTest", cycle_count);
    auto _harc_trace_dump_next = [&](const char* clock, uint64_t clock_cycle) {
        uint64_t t = _trace_time++;
        trace.set_timing(t, clock, clock_cycle);
        HARC_RT_DUMP_WAVE_TRACE(tfp, t);
    };
    auto _harc_trace_dump_at = [&](uint64_t t, const char* clock, uint64_t clock_cycle) {
        trace.set_timing(t, clock, clock_cycle);
        HARC_RT_DUMP_WAVE_TRACE(tfp, t);
    };

    HARC_RT_LOG_WAVE_FILE(log_ctx.sim_log, _wave_path);


    auto tick = [&]() {
        _harc_eval_negedge(dut);
        _harc_trace_dump_next("clk", (uint64_t)cycle_count);
        _harc_eval_posedge(dut);
        _harc_trace_dump_next("clk", (uint64_t)(cycle_count + 1));
        cycle_count++;
        for (auto& _svc : _post_eval_services) _svc();
        if (!_post_eval_services.empty()) dut->eval();
        if (!_post_eval_services.empty()) _harc_trace_dump_next("clk", (uint64_t)cycle_count);
        for (auto& _c : _checkers) _c();
    };

    auto sim_logf_line = [&](FILE* f, const char* sev, const char* fmt, ...) {
        HARC_RT_LOG_FILE_ONLY_PRINTF(f, cycle_count, sev, fmt);
    };

    auto sim_log_line = [&](const char* sev, const char* fmt, ...) {
        HARC_RT_LOG_PRINTF(log_ctx.sim_log, &trace, cycle_count, sev, fmt);
    };

    sim_log_line("INFO", "seed=%llu", (long long)harc_rng.state);

    harc_rt::ThreadScheduler sched;
    BusArbiterTb _tb;
    _checkers.push_back([&]() {
        bool _cg_hit_cp_grant[4] = {};
        bool _cg_hit_cp_valid[2] = {};
        {
            uint64_t _v = (uint64_t)(harc_rt::harc_read(dut->grant_requester));
            if (((_v == 0))) { _tb.cov.cp_grant.r0++; _cg_hit_cp_grant[0] = true; }
            if (((_v == 1))) { _tb.cov.cp_grant.r1++; _cg_hit_cp_grant[1] = true; }
            if (((_v == 2))) { _tb.cov.cp_grant.r2++; _cg_hit_cp_grant[2] = true; }
            if (((_v == 3))) { _tb.cov.cp_grant.r3++; _cg_hit_cp_grant[3] = true; }
        }
        {
            uint64_t _v = (uint64_t)(harc_rt::harc_read(dut->grant_valid));
            if (((_v == 1))) { _tb.cov.cp_valid.granted++; _cg_hit_cp_valid[0] = true; }
            if (((_v == 0))) { _tb.cov.cp_valid.no_request++; _cg_hit_cp_valid[1] = true; }
        }
        for (size_t _i = 0; _i < 4; ++_i) {
            for (size_t _j = 0; _j < 2; ++_j) {
                if (_cg_hit_cp_grant[_i] && _cg_hit_cp_valid[_j]) _tb.cov._auto_cross_cp_grant__cp_valid[_i][_j]++;
            }
        }
    });
    harc_rt::ThreadSlot _run_slot;
    sched.slots.push_back(&_run_slot);
    _run_slot.thread = [&](harc_rt::ThreadSlot* _slot) -> harc_rt::HarcThread {
        _tb.dut = dut;
        { // run_BusArbiterTest (TB-IR loop-switch)
            int __bb = 0;
            bool __done = false;
            while (!__done) {
                switch (__bb) {
                case 0: {
                    harc_rt::harc_assign(dut->rst, 1);
                    harc_rt::harc_assign(dut->request_valid, 0);
                    co_await harc_rt::wait_cycles(_slot, (uint32_t)(2));
                    __bb = 1;
                    break;
                }
                case 1: {
                    harc_rt::harc_assign(dut->rst, 0);
                    harc_rt::harc_assign(dut->request_valid, 1);
                    co_await harc_rt::wait_cycles(_slot, (uint32_t)(1));
                    __bb = 2;
                    break;
                }
                case 2: {
                    if (!((harc_rt::harc_read(dut->grant_valid) == 1))) {
                        sim_log_line("FAIL", "single req0: grant_valid should be 1");
                        errors++;
                    }
                    if (!((harc_rt::harc_read(dut->grant_requester) == 0))) {
                        sim_log_line("FAIL", "single req0: got grant_requester=%lld", harc_rt::harc_printf_ll(harc_rt::harc_read(dut->grant_requester)));
                        errors++;
                    }
                    sim_log_line("INFO", "PASS: single requester 0 granted");
                    harc_rt::harc_assign(dut->request_valid, 4);
                    co_await harc_rt::wait_cycles(_slot, (uint32_t)(1));
                    __bb = 3;
                    break;
                }
                case 3: {
                    if (!((harc_rt::harc_read(dut->grant_valid) == 1))) {
                        sim_log_line("FAIL", "single req2: grant_valid should be 1");
                        errors++;
                    }
                    if (!((harc_rt::harc_read(dut->grant_requester) == 2))) {
                        sim_log_line("FAIL", "single req2: got grant_requester=%lld", harc_rt::harc_printf_ll(harc_rt::harc_read(dut->grant_requester)));
                        errors++;
                    }
                    sim_log_line("INFO", "PASS: single requester 2 granted");
                    harc_rt::harc_assign(dut->request_valid, 0);
                    co_await harc_rt::wait_cycles(_slot, (uint32_t)(1));
                    __bb = 4;
                    break;
                }
                case 4: {
                    if (!((harc_rt::harc_read(dut->grant_valid) == 0))) {
                        sim_log_line("FAIL", "no request: grant_valid should be 0");
                        errors++;
                    }
                    sim_log_line("INFO", "PASS: no grant when no request");
                    __done = true;
                    break;
                }
                default: __done = true; break;
                }
            }
        }
        { // check_BusArbiterTest (TB-IR loop-switch)
            int __bb = 0;
            bool __done = false;
            while (!__done) {
                switch (__bb) {
                case 0: {
                    _tb.cov.report();
                    if (!((_tb.cov.cp_grant.r0 > 0))) {
                        sim_log_line("FAIL", "R0 grant coverage hole");
                        errors++;
                    }
                    if (!((_tb.cov.cp_grant.r2 > 0))) {
                        sim_log_line("FAIL", "R2 grant coverage hole");
                        errors++;
                    }
                    if (!((_tb.cov.cp_valid.granted > 0))) {
                        sim_log_line("FAIL", "granted coverage hole");
                        errors++;
                    }
                    if (!((_tb.cov.cp_valid.no_request > 0))) {
                        sim_log_line("FAIL", "no-request coverage hole");
                        errors++;
                    }
                    __done = true;
                    break;
                }
                default: __done = true; break;
                }
            }
        }
        co_return;
    }(&_run_slot);

    // Resume each coroutine once so initial-setup statements run
    // before the first clock edge. Single-threaded — workers
    // haven't been spawned yet.
    sched.bootstrap();

    // Drive the clock until the run coroutine completes.
    //
    // `wait N cycles` matches Verilog's `@(posedge clk)` semantic:
    // values set in the segment BEFORE the wait are sampled at the
    // next posedge. Per loop iteration:
    //   1. Posedge (clk 0→1, eval) — DUT FFs latch the current input
    //      values (set in the previous segment, or in bootstrap on
    //      the first iteration).
    //   2. `sched.tick()` — advance the run coroutine to its next
    //      wait, setting the inputs for the NEXT cycle's posedge.
    //   3. Falling edge (clk 1→0, eval) — comb re-settles with the
    //      newly-set inputs.
    //   4. Cycle counter + checkers.
    // One initial `eval(clk=0)` before the loop settles combinational
    // logic with the bootstrap inputs — same role as `initial`-block
    // settle in Verilog. Each `wait 1 cycle` then maps to exactly
    // one posedge that observes the just-set values.
    _harc_eval_negedge(dut);
    _harc_trace_dump_next("clk", (uint64_t)cycle_count);
    while (_run_slot.kind != harc_rt::WaitKind::Done && !_fatal) {
        _harc_eval_posedge(dut);
        _harc_trace_dump_next("clk", (uint64_t)(cycle_count + 1));
        cycle_count++;
        for (auto& _svc : _post_eval_services) _svc();
        if (!_post_eval_services.empty()) dut->eval();
        if (!_post_eval_services.empty()) _harc_trace_dump_next("clk", (uint64_t)cycle_count);
        sched.tick();
        _harc_eval_negedge(dut);
        _harc_trace_dump_next("clk", (uint64_t)cycle_count);
        for (auto& _c : _checkers) _c();
    }


    for (auto& _r : _auto_cov_reports) _r();
    dut->final();
    HARC_RT_WRITE_COVERAGE(Verilated::threadContextp()->coveragep());
    HARC_RT_CLOSE_WAVE_TRACE(tfp);
    delete dut;

    return harc_rt::log::harc_finish_sim_run(log_ctx, trace, cycle_count, errors);
}

int main(int argc, char** argv) {
    const char* test_sel = harc_rt::log::harc_select_test(argc, argv);
    if (!test_sel) return run_BusArbiterTest(argc, argv);
    if (std::strcmp(test_sel, "BusArbiterTest") == 0) return run_BusArbiterTest(argc, argv);
    harc_rt::log::harc_report_unknown_test(test_sel, "BusArbiterTest");
    return 1;
}
